@@ -1,3 +1,8 @@
+2005-05-17  Derek Price  <derek@ximbiot.com>
+
+	* glob.m4 (gl_GLOB): Prefer AC_COMPILE_IFELSE to AC_EGREP_CPP.
+	(Suggested by Paul Eggert <eggert@cs.ucla.edu>.)
+
 2005-05-15  Derek Price  <derek@ximbiot.com>
 
 	* glob.m4 (gl_GLOB): Don't call gl_PREREQ_GLOB.
